src/main/java/com/example/demo/errors/DateValidation.java
package com.example.demo.errors;

import com.example.demo.doamin.service.DataService.DateService;

import lombok.AllArgsConstructor;

@AllArgsConstructor
public class DateValidation {

	private final DateService dateService;

}
